safari issue
the footer overlaps the main section

--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,15 @@ body {
   line-height: 1.6;
   background: var(--primary-color);
   color: var(--text-color);
-  margin: 0;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  margin: 0; /* its better to have 0 here, so it is easier to interpret by the browser */
+  height: 100%; /* tells the browser to cover at least 100% of the screen */
+  display: flex; /* The body is the flex conteiner from head, main and footer */
+  flex-direction: column; /* vertical align the head, main and footer */
+  justify-content: space-between; /* spreads the head to the top, the footer to the bottom and spaces evenly in between */
+}
+
+main {
+  flex: 1;
 }
 
 h1 {
